[package]
name = "listener-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
crossbeam = "0.8.1"
env_logger = "0.9.0"
log = "0.4.16"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full", "sync"] }
futures = "0.3"
config = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tracing = "0.1.32"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
async-trait = "0.1.53"
