[package]
name = "listener"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "listener"

[dependencies]
anyhow = "1.0.56"
env_logger = "0.9.0"
log = "0.4.16"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full", "sync"] }

listener-core = { path = "../core" }

listener-avalanche = { path = "../blockchains/avalanche" }
crossbeam = "0.8.1"
