[package]
name = "listener-avalanche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
crossbeam = "0.8.1"
env_logger = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.21"
listener-core = { path = "../../core" }
log = "0.4.16"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full", "sync"] }
tokio-tungstenite = "0.17.1"
